# mosaic

./: .env.example  .gitignore  CLAUDE.md  Metrics.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.claude/: CLAUDE.md  schema-guardian
config/: sources.json
data/: poll_state.db  raw.db  seen.db
evals/: __init__.py  harness.py  questions.yaml  run.py
extraction/: README.md  __init__.py  chroma_store.py  chunk.py  cold_path.py  embedder.py  engine.py  extraction_engine.py  run.py  text_metrics.py  tickers.py  type_inference.py  validation.py
generation/: README.md  __init__.py  claim_parser.py  contracts.py  formatter.py  prompt_builder.py  synthesizer.py  validator.py
ingestion/: engine.py  run.py  sources.py
processing/: __init__.py  chunk.py  engine.py  text_metrics.py  type_inference.py  validation.py
query/: __init__.py  engine.py  run.py
retrieval/: cluster.py  contracts.py  output.py  rerank.py  router.py  search.py
shared/: refresh_tickers_cli.py  tickers.py
source_validation/: README.md  __init__.py
tests/: conftest.py  test_adapter_contract.py  test_body_enrichment.py  test_chunk.py  test_chunk_engine.py  test_chunk_fixed.py  test_chunk_paragraph.py  test_chunk_registry.py  test_chunk_section.py  test_dedup.py  test_edge_cases.py  test_engine.py  test_handoff.py  test_hashing.py  test_highlight.py  test_integration.py  test_normalizer.py  test_poll_state.py  test_quality.py  test_quality_fixtures.py  test_raw_store.py  test_run.py  test_section_detection.py  test_source_config.py  test_sources.py  (+4 more)
(+113 files in other folders)
