[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mosaic-ingestion"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Add the project root to sys.path so `from ingestion.x import y` works in tests
# without installing the package.
pythonpath = ["."]
markers = [
    "integration: marks tests that hit live external APIs (deselect with -m \"not integration\")",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
